--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.38.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9"
