--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.3",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.38.0",
