--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.2",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.38.0",
