--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-radio-group": "^1.1.2",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "eslint": "^8.38.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
